# MeetMemo

./: .gitignore
backend/: .env.example  .gitignore  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/models/: __init__.py  meeting.py
backend/app/routers/: compose.py  extract.py  meetings.py  transcribe.py
backend/app/services/: __init__.py  claude_compose.py  claude_extraction.py  google_stt.py  supabase_client.py
backend/tests/: test_models.py
backend/tests/services/: test_claude_compose.py  test_claude_extraction.py  test_google_stt.py  test_supabase_client.py
docs/superpowers/plans/: 2026-03-28-backend-pipeline.md
