[project]
name = "meetmemo-backend"
version = "1.0.0"
description = "MeetMemo FastAPI Backend - AI-powered meeting notes"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "anthropic==0.18.0",
    "google-cloud-speech==2.26.0",
    "supabase==2.3.0",
    "python-dotenv==1.0.0",
    "httpx==0.24.1",
    "python-multipart==0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.21.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.21.2",
]
